--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/_GridViewPartial_deudas.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/_GridViewPartial_deudas.cshtml
@@ -3,7 +3,7 @@
     var grid = Html.DevExpress().GridView(settings =>
     {
         settings.Name = "GridView_deudas";
-        settings.CallbackRouteValues = new { Controller = "Deudas", Action = "GridViewPartial_deudas", Fecha_ini = ViewBag.fecha_ini, Fecha_fin = ViewBag.fecha_fin, IdSucursal = ViewBag.IdSucursal, MostrarDocumentosElectronicos = ViewBag.MostrarDocumentosElectronicos, FiltrarPorFechaContabilizacion = ViewBag.FiltrarPorFechaContabilizacion };
+        settings.CallbackRouteValues = new { Controller = "Deudas", Action = "GridViewPartial_deudas", Nuevo = ViewBag.Nuevo };
 
         //Configuración para que la grilla no muestre texto completo
         settings.SettingsBehavior.AllowEllipsisInText = true;
@@ -71,21 +71,18 @@
             c.Caption = "#";
             c.SetDataItemTemplateContent(tc =>
             {
-                if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
-                {
-                    ViewContext.Writer.Write(
-                Html.ActionLink("Modificar", "Modificar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdTipoCbte_Ogiro = DataBinder.Eval(tc.DataItem, "IdTipoCbte_Ogiro"), IdCbteCble_Ogiro = DataBinder.Eval(tc.DataItem, "IdCbteCble_Ogiro") }) + "&nbsp;" +
-                        Html.ActionLink("Anular", "Anular", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdTipoCbte_Ogiro = DataBinder.Eval(tc.DataItem, "IdTipoCbte_Ogiro"), IdCbteCble_Ogiro = DataBinder.Eval(tc.DataItem, "IdCbteCble_Ogiro") },
-                        new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
-
-                            );
-                }
+                ViewContext.Writer.Write(
+                    Html.ActionLink("Consultar", "Consultar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdTipoCbte_Ogiro = DataBinder.Eval(tc.DataItem, "IdTipoCbte_Ogiro"), IdCbteCble_Ogiro = DataBinder.Eval(tc.DataItem, "IdCbteCble_Ogiro") })
+                );
             });
             c.SetHeaderTemplateContent(tc =>
             {
-                ViewContext.Writer.Write(
-                    Html.ActionLink("Nuevo", "Nuevo", new { IdTipoSRI = ViewBag.IdTipoSRI , IdEmpresa = Core.Erp.Web.Helps.SessionFixed.IdEmpresa}).ToHtmlString()
-                );
+                if (ViewBag.Nuevo == true)
+                {
+                    ViewContext.Writer.Write(
+                        Html.ActionLink("Nuevo", "Nuevo", new { IdEmpresa = Core.Erp.Web.Helps.SessionFixed.IdEmpresa }).ToHtmlString()
+                    );
+                }
             });
             c.Settings.AllowDragDrop = DefaultBoolean.False;
             c.Settings.AllowSort = DefaultBoolean.False;
@@ -153,6 +150,7 @@
             });
             column.Width = Unit.Percentage(5);
         });
+        settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
     });
 }
 @grid.Bind(Model).GetHtml()
