--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/CodigoSRI/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/CodigoSRI/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Core.Erp.Info.CuentasPorPagar.cp_codigo_SRI_Info
 @{
     ViewBag.Title = "Consulta de códigos SRI";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
@@ -10,8 +10,10 @@
 
 @using (Html.BeginForm())
 {
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
+    @Html.HiddenFor(q => q.IdTipoSRI, new { @id = "IdTipoSRI" })
 
-    @Html.Action("GridViewPartial_codigo_sri")
+    @Html.Action("GridViewPartial_codigo_sri", new { IdTipoSRI = ViewBag.IdTipoSRI, Nuevo=ViewBag.Nuevo })
     <div class="box-footer">
         <a class="btn btn-default" href="@Url.Action("Index","TipoCodigoSRI",new { Area = "CuentasPorPagar" },null)">Volver</a>
     </div>
