--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/NotaCredito/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/NotaCredito/Index.cshtml
@@ -11,7 +11,9 @@
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
 @using (Html.BeginForm("Index", "NotaCredito", FormMethod.Post, new { @role = "form", @class = "form" }))
 {
-    @Html.HiddenFor(q => q.IdEmpresa)
+@Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
+@Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+
     <div class="box ">
         <div class="box-header with-border">
             <div class="row">
@@ -99,7 +101,7 @@
             </div>
         </div>
         <div class="box-body">
-            @Html.Action("GridViewPartial_nota_credito", new { fecha_ini = Model.fecha_ini, fecha_fin = Model.fecha_fin, IdSucursal = Model.IdSucursal })
+            @Html.Action("GridViewPartial_nota_credito", new { Nuevo = ViewBag.Nuevo })
 
 
         </div>
