--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/NotaDebito/Consultar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/NotaDebito/Consultar.cshtml
@@ -36,18 +36,49 @@
     @Html.HiddenFor(q => q.IdCbteCble_Nota)
     @Html.HiddenFor(q => q.IdTipoCbte_Nota)
 
-<div class="row">
-    <div class="col-md-12">
-        <div class="col-md-offset-11 col-md-1">
-            <label for="IdImprimir"></label>
-            <div class="form-group">
-                <button type="button" class="btn btn-primary form-control" id="btn_imprimir" onclick="Imprimir();" title="Imprimir">
-                    <i class="fa fa-print"></i>
-                </button>
+    @Html.HiddenFor(q => q.Nuevo, new { @id = "Nuevo" })
+    @Html.HiddenFor(q => q.Modificar, new { @id = "Modificar" })
+    @Html.HiddenFor(q => q.Anular, new { @id = "Anular" })
+
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-offset-8 col-md-1">
+                <div class="form-group">
+                    <div id="btnNuevo" hidden>
+                        <a type="button" class="btn btn-primary form-control" title="Nuevo" href="@Url.Action("Nuevo","NotaDebito",new { Area = "CuentasPorPagar", IdEmpresa = Model.IdEmpresa },null)">
+                            <i class="fa fa-plus"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-1">
+                <div class="form-group">
+                    <div id="btnModificar" hidden>
+                        <a type="button" class="btn btn-primary form-control" title="Modificar" href="@Url.Action("Modificar", "NotaDebito", new { Area = "CuentasPorPagar", IdEmpresa = Model.IdEmpresa, IdTipoCbte_Nota = Model.IdTipoCbte_Nota, IdCbteCble_Nota=Model.IdCbteCble_Nota }, null)">
+                            <i class="fa fa-edit"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-1">
+                <div class="form-group">
+                    <div id="btnAnular" hidden>
+                        <a type="button" class="btn btn-primary form-control" title="Anular" href="@Url.Action("Anular", "NotaDebito", new { Area = "CuentasPorPagar", IdEmpresa = Model.IdEmpresa, IdTipoCbte_Nota=Model.IdTipoCbte_Nota, IdCbteCble_Nota=Model.IdCbteCble_Nota }, null)">
+                            <i class="fa fa-remove"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-1">
+                <div class="form-group">
+                    <button type="button" class="btn btn-primary form-control" id="btn_imprimir" onclick="Imprimir();" title="Imprimir">
+                        <i class="fa fa-print"></i>
+                    </button>
+                </div>
             </div>
         </div>
     </div>
-</div>
+
 <div class="row">
     <div class="col-md-6">
         <div class="col-md-6">
@@ -332,10 +363,6 @@
         </div>
     </div>
     <div class="box-footer">
-    @if (ViewBag.MostrarBoton ?? false)
-    {
-        <button type="submit" class="btn btn-primary">Guardar</button>
-    }
         <a class="btn btn-default" href="@Url.Action("Index","NotaDebito",new { Area = "CuentasPorPagar" },null)">Cancelar</a>
     </div>
     @section Scripts {
@@ -349,6 +376,8 @@
 <script>
     $(function () {
         ocultar_mostrar_div();
+        MostrarBotonesAccion();
+
         $("#cn_num_doc_modificado").change(function () {
             rellenar_ceros();
         });
@@ -378,6 +407,21 @@
         $("#cmbTipoDocu_modif").empty();
         get_list_tipo_doc();
     });
+
+    function MostrarBotonesAccion() {
+        if ($("#Nuevo").val() == 1)
+        {
+            $("#btnNuevo").show();
+        }
+        if ($("#Modificar").val() == 1)
+        {
+            $("#btnModificar").show();
+        }
+        if ($("#Anular").val() == 1)
+        {
+            $("#btnAnular").show();
+        }
+    }
 
     function rellenar_ceros_izquierda() {
         var str = "" + Number($("#cn_Nota").val());
