--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Retencion/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Retencion/Index.cshtml
@@ -12,7 +12,9 @@
 
 @using (Html.BeginForm())
 {
-    @Html.HiddenFor(q => q.IdEmpresa)
+@Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
+@Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+
   <div class="box ">
         <div class="box-header with-border">
             <div class="row">
@@ -102,7 +104,7 @@
             </div>
         </div>
         <div class="box-body">
-            @Html.Action("GridViewPartial_retenciones", new { IdSucursal = Model.IdSucursal, fecha_ini = Model.fecha_ini, fecha_fin = Model.fecha_fin })
+            @Html.Action("GridViewPartial_retenciones", new { Nuevo = ViewBag.Nuevo })
         </div>
         <!-- /.box-body -->
         <div class="box-footer">
