--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/ConciliacionAnticipoProveedor/Consultar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/ConciliacionAnticipoProveedor/Consultar.cshtml
@@ -1,9 +1,8 @@
-﻿
-@model Core.Erp.Info.CuentasPorPagar.cp_conciliacionAnticipo_Info
+﻿@model Core.Erp.Info.CuentasPorPagar.cp_conciliacionAnticipo_Info
 @{
     /**/
 
-    ViewBag.Title = "Anular conciliación de anticipo";
+    ViewBag.Title = "Consultar conciliación de anticipo";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
         Response.Redirect("~/Account/Login");
@@ -14,6 +13,15 @@
         <div class="alert alert-warning alert-dismissible">
             <h4>
                 <i class="icon fa fa-warning"></i> @ViewBag.mensaje
+            </h4>
+        </div>
+    }
+    if (ViewBag.MensajeSuccess != null)
+    {
+        <div class="alert alert-success alert-dismissible">
+            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+            <h4>
+                <i class="icon fa fa-check"></i> @ViewBag.MensajeSuccess
             </h4>
         </div>
     }
@@ -179,13 +187,17 @@
 
 </script>
 
-@using (Html.BeginForm("Anular", "ConciliacionAnticipoProveedor", FormMethod.Post, new { @class = "form", @role = "form" }))
+@using (Html.BeginForm("Consultar", "ConciliacionAnticipoProveedor", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
     @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
     @Html.HiddenFor(q => q.IdConciliacion, new { @id = "IdConciliacion" })
     @Html.HiddenFor(q => q.IdCbteCble, new { @id = "IdCbteCble" })
     @Html.HiddenFor(q => q.IdTipoCbte, new { @id = "IdTipoCbte" })
     @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
+
+    @Html.HiddenFor(q => q.Nuevo, new { @id = "Nuevo" })
+    @Html.HiddenFor(q => q.Modificar, new { @id = "Modificar" })
+    @Html.HiddenFor(q => q.Anular, new { @id = "Anular" })
     <div class="modal fade" id="Modal_OrdenPago" role="dialog">
         <div class="modal-dialog modal-lg">
             <!-- Modal content-->
@@ -224,7 +236,37 @@
             </div>
         </div>
     </div>
-
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-offset-9 col-md-1">
+                <div class="form-group">
+                    <div id="btnNuevo" hidden>
+                        <a type="button" class="btn btn-primary form-control" title="Nuevo" href="@Url.Action("Nuevo","ConciliacionAnticipoProveedor",new { Area = "CuentasPorPagar", IdEmpresa = Model.IdEmpresa },null)">
+                            <i class="fa fa-plus"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-1">
+                <div class="form-group">
+                    <div id="btnModificar" hidden>
+                        <a type="button" class="btn btn-primary form-control" title="Modificar" href="@Url.Action("Modificar", "ConciliacionAnticipoProveedor", new { Area = "CuentasPorPagar", IdEmpresa = Model.IdEmpresa, IdConciliacion=Model.IdConciliacion }, null)">
+                            <i class="fa fa-edit"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-1">
+                <div class="form-group">
+                    <div id="btnAnular" hidden>
+                        <a type="button" class="btn btn-primary form-control" title="Anular" href="@Url.Action("Anular", "ConciliacionAnticipoProveedor", new { Area = "CuentasPorPagar", IdEmpresa = Model.IdEmpresa, IdConciliacion=Model.IdConciliacion }, null)">
+                            <i class="fa fa-remove"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-4">
@@ -278,17 +320,6 @@
                     <label for="co_observacion">Observación*</label>
                     @Html.TextBoxFor(q => q.Observacion, new { @class = "form-control", @id = "observacion" })
                     @Html.ValidationMessageFor(q => q.Observacion, "", new { @class = "text-danger" })
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
-            <div class="col-md-12">
-                <div class="form-group has-error">
-                    <label for="co_observacion">Motivo de anulación*</label>
-                    @Html.TextBoxFor(q => q.MotivoAnulacion, new { @class = "form-control", @id = "observacion" })
-                    @Html.ValidationMessageFor(q => q.MotivoAnulacion, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
@@ -364,7 +395,6 @@
         </div>
     </div>
     <div class="box-footer">
-        <button type="submit" class="btn btn-danger">Anular</button>
         <a class="btn btn-default" href="@Url.Action("Index","ConciliacionAnticipoProveedor",new { Area = "CuentasPorPagar" },null)">Cancelar</a>
     </div>
     @section Scripts {
