--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/SolicitudPago/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/SolicitudPago/Index.cshtml
@@ -1,6 +1,5 @@
 ﻿@model Core.Erp.Info.Helps.cl_filtros_Info
 @{
-
     {
         ViewBag.Title = "Consulta de solicitudes de pago";
         if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
@@ -14,7 +13,8 @@
 
 @using (Html.BeginForm("Index", "SolicitudPago", FormMethod.Post, new { @role = "form", @class = "form" }))
 {
-    @Html.HiddenFor(q => q.IdEmpresa)
+@Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
+@Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
     <div class="box ">
         <div class="box-header with-border">
             <div class="row">
@@ -103,7 +103,7 @@
         </div>
         <div class="box-body">
 
-            @Html.Action("GridViewPartial_solicitud_pago", new { IdSucursal = Model.IdSucursal, Fecha_ini = Model.fecha_ini, Fecha_fin = Model.fecha_fin })
+            @Html.Action("GridViewPartial_solicitud_pago", new { Nuevo = ViewBag.Nuevo })
 
 
         </div>
