--- a/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/CatalogoCXC/Consultar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/CatalogoCXC/Consultar.cshtml
@@ -38,7 +38,7 @@
             <div class="col-md-offset-9 col-md-1">
                 <div class="form-group">
                     <div id="btnNuevo" hidden>
-                        <a type="button" class="btn btn-primary form-control" title="Nuevo" href="@Url.Action("Nuevo","CatalogoTipoCXC",new { Area = "CuentasPorCobrar", IdCatalogo_tipo = Model.IdCatalogo_tipo },null)">
+                        <a type="button" class="btn btn-primary form-control" title="Nuevo" href="@Url.Action("Nuevo","CatalogoCXC",new { Area = "CuentasPorCobrar", IdCatalogo_tipo = Model.IdCatalogo_tipo },null)">
                             <i class="fa fa-plus"></i>
                         </a>
                     </div>
@@ -47,7 +47,7 @@
             <div class="col-md-1">
                 <div class="form-group">
                     <div id="btnModificar" hidden>
-                        <a type="button" class="btn btn-primary form-control" title="Modificar" href="@Url.Action("Modificar", "CatalogoTipoCXC", new { Area = "CuentasPorCobrar", IdCatalogo_tipo = Model.IdCatalogo_tipo, IdCatalogo = Model.IdCatalogo }, null)">
+                        <a type="button" class="btn btn-primary form-control" title="Modificar" href="@Url.Action("Modificar", "CatalogoCXC", new { Area = "CuentasPorCobrar", IdCatalogo_tipo = Model.IdCatalogo_tipo, IdCatalogo = Model.IdCatalogo }, null)">
                             <i class="fa fa-edit"></i>
                         </a>
                     </div>
@@ -56,7 +56,7 @@
             <div class="col-md-1">
                 <div class="form-group">
                     <div id="btnAnular" hidden>
-                        <a type="button" class="btn btn-primary form-control" title="Anular" href="@Url.Action("Anular", "CatalogoTipoCXC", new { Area = "CuentasPorCobrar", IdCatalogo_tipo = Model.IdCatalogo_tipo, IdCatalogo = Model.IdCatalogo }, null)">
+                        <a type="button" class="btn btn-primary form-control" title="Anular" href="@Url.Action("Anular", "CatalogoCXC", new { Area = "CuentasPorCobrar", IdCatalogo_tipo = Model.IdCatalogo_tipo, IdCatalogo = Model.IdCatalogo }, null)">
                             <i class="fa fa-remove"></i>
                         </a>
                     </div>
