--- a/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/CobranzaRetenciones/AplicarRetencion.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/CobranzaRetenciones/AplicarRetencion.cshtml
@@ -137,14 +137,14 @@
                     </button>
                 </div>
             </div>
-            <div class="col-md-1">
+            @*<div class="col-md-1">
                 <label for="IdImprimir"></label>
                 <div class="form-group">
                     <a type="button" class="btn btn-primary form-control " href="@Url.Action("CobrosSinRetencion","CobranzaRetenciones",new { Area = "CuentasPorCobrar" })">
                         <i class="fa fa-plus"></i>
                     </a>
                 </div>
-            </div>
+            </div>*@
         </div>
     </div>
 
