--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/NotaDebito/Consultar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/NotaDebito/Consultar.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.CuentasPorPagar.cp_nota_DebCre_Info
 @{
-    ViewBag.Title = ("Modificar nota de débito" + " con ID #" + @Model.IdCbteCble_Nota);
+    ViewBag.Title = ("Consultar nota de débito" + " con ID #" + @Model.IdCbteCble_Nota);
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
         Response.Redirect("~/Account/Login");
@@ -28,7 +28,7 @@
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
 <script src="~/Scripts/ScriptsGenerales.js"></script>
 
-@using (Html.BeginForm("Modificar", "NotaDebito", FormMethod.Post, new { @class = "form", @role = "form" }))
+@using (Html.BeginForm("Consultar", "NotaDebito", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
 
     @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
